<resources>
    <string name="app_name">b07-Project</string>
    <string name="Event_Name">Event Name:</string>
    <string name="Event_Sport">Sport:</string>
    <string name="Event_StartTime">Start Time:</string>
    <string name="Event_EndTime">End Time:</string>
    <string name="Event_Capacity">Capacity:</string>
    <string name="Event_Description">Description:</string>
    <string name="Event_Venue">Venue:</string>
    <string name="Choose_Venue">Choose Venue:</string>
    <string name="Choose_Sport">Choose Sport:</string>
    <string name="Create_Event">Create Event</string>
    <string name="Event_Date">Event Date:</string>
    <string name="host">Host</string>
    <string name="event_name">Event Name</string>
    <string name="tittle">SportsHub</string>
    <string name="venue">venue</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="todo">TODO</string>
    <string name="user_s_name">User\'s Name</string>
    <string name="title_activity_venue_desc">VenueDesc</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>