<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sampleEventCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:backgroundTint="#F4F4F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="374dp"
            android:layout_height="108dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/roundedges"
            android:backgroundTint="#C7D1C2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/divider"
                android:layout_width="3dp"
                android:layout_height="106dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="#FFFFFF"
                android:foregroundTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.708"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="262dp"
                android:layout_height="108dp"
                android:layout_marginStart="1dp"
                android:background="#1E5120"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/profileEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_name"
                    android:textAlignment="viewStart"
                    android:textColor="#F8F8F8"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileHostName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/host"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/profileVenueName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/venue"
                    android:textColor="#FDFDFD" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="106dp"
                android:layout_height="91dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/profileDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/profileStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

                <Button
                    android:id="@+id/profileDelete"
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#1E5120"
                    android:text="Delete"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>