<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VenuePageDennt">

    <androidx.constraintlayout.widget.ConstraintLayout


        android:id="@+id/profilePage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA">

        <ImageView
            android:id="@+id/AddPost"
            android:layout_width="30dp"
            android:layout_height="29dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/plus"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="62dp"
            android:layout_height="59dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="108dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/AppName"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sports" />

        <ImageView
            android:id="@+id/Header"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:background="#2B782E"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/SearchPost"
            android:layout_width="33dp"
            android:layout_height="29dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/search" />

        <TextView
            android:id="@+id/AppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:letterSpacing="0.5"
            android:text="@string/tittle"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />

        <ScrollView
            android:id="@+id/venuePageCards"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" >

            <LinearLayout
                android:id="@+id/venuePageCardList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/venuePageCard"
                    android:layout_width="match_parent"
                    android:layout_height="146dp"
                    android:layout_marginBottom="25dp"
                    android:background="#123E13"
                    android:onClick="transitionToVenueDesc">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:text="Venue"
                        android:textColor="#FFFFFF"
                        android:textSize="40dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/venueCardOptions"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="1dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView16">

                        <Button
                            android:id="@+id/venueCardExplore"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:backgroundTint="#2B782E"
                            android:text="Explore" />

                        <Button
                            android:id="@+id/venuecardInfo"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:backgroundTint="#2B782E"
                            android:text="More Info" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:background="#000000"
            android:orientation="horizontal"
            android:textAlignment="center"
            app:flow_horizontalAlign="center"
            app:flow_verticalAlign="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/doc" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/signout" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="172dp"
            android:layout_height="27dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_s_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/venuePageAdd"
            android:layout_width="36dp"
            android:layout_height="28dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:onClick="addCard"
            app:layout_constraintEnd_toStartOf="@+id/AddPost"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/plus"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>